--- a/demo01/index.html
+++ b/demo01/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="app">
-      <!-- 1.插池，不能使用条件语句 -->
+      <!-- 1.插值，不能使用条件语句 -->
       <span>{{message}} {{value}}</span>
       <!-- 2.vue binding -->
       <span v-bind:title="value">文本</span>
