--- a/demo01/index.html
+++ b/demo01/index.html
@@ -30,15 +30,18 @@
         <!-- 6.vue for语句 -->
         <li v-for="item in list">
           <span v-if="!item.del">{{item.title}}</span>
-          <span v-else style="text-decoration: line-through;"
-            >{{item.title}}</span
-          >
+          <span v-else :style="styleObj">{{item.title}}</span>
           <button v-show="!item.del">删除</button>
         </li>
       </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
+      var styleObj = {
+        "text-decoration": "line-through",
+        color: "red",
+      };
+
       var vm = new Vue({
         el: "#app",
         data: {
@@ -46,30 +49,32 @@
           value: "ghost",
           item: {
             title: "课程1",
-            del: false
+            del: false,
           },
           list: [
             {
               title: "课程1",
-              del: false
+              del: false,
             },
             {
               title: "课程2",
-              del: true
+              del: true,
             },
             {
               title: "课程3",
-              del: false
-            }
-          ]
+              del: false,
+            },
+          ],
+          styleObj: styleObj,
         },
-        methods:{
-            reverseMessage : function()
-            {
-              this.message = this.message.split('').reverse().join('');
-            }
-          }
+        methods: {
+          reverseMessage: function () {
+            this.message = this.message.split("").reverse().join("");
+          },
+        }
       });
+
+      vm.styleObj.color = "blue";
     </script>
   </body>
 </html>
