--- a/demo01/index.html
+++ b/demo01/index.html
@@ -25,56 +25,17 @@
             >{{item.title}}</span
           >
           <!-- 5.vue show -->
-          <button v-show="!item.del">删除</button>
+          <button v-show="!item.del" @click="deleteHandler" title="title">删除</button>
         </li>
         <!-- 6.vue for语句 -->
-        <li v-for="item in list">
+        <li v-for="(item, index) of list">
           <span v-if="!item.del">{{item.title}}</span>
           <span v-else :style="styleObj">{{item.title}}</span>
-          <button v-show="!item.del">删除</button>
+          <button v-show="!item.del" @click="">删除{{index}}</button>
         </li>
       </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script>
-      var styleObj = {
-        "text-decoration": "line-through",
-        color: "red",
-      };
-
-      var vm = new Vue({
-        el: "#app",
-        data: {
-          message: "hello",
-          value: "ghost",
-          item: {
-            title: "课程1",
-            del: false,
-          },
-          list: [
-            {
-              title: "课程1",
-              del: false,
-            },
-            {
-              title: "课程2",
-              del: true,
-            },
-            {
-              title: "课程3",
-              del: false,
-            },
-          ],
-          styleObj: styleObj,
-        },
-        methods: {
-          reverseMessage: function () {
-            this.message = this.message.split("").reverse().join("");
-          },
-        }
-      });
-
-      vm.styleObj.color = "blue";
-    </script>
+    <script src="js/index.js"></script>
   </body>
 </html>
