--- a/demo01/index.html
+++ b/demo01/index.html
@@ -31,13 +31,21 @@
         <li v-for="(item, index) of list">
           <span v-if="!item.del">{{item.title}}</span>
           <span v-else :style="styleObj">{{item.title}}</span>
-          <button v-show="!item.del" @click="deleteHandler">删除{{index}}</button>
+          <button v-show="!item.del" @click="deleteHandler(item.title)">
+            删除{{index}}
+          </button>
         </li>
       </ul>
 
       <p>下面是组件列表示例</p>
       <ul>
-        <course-item v-for="item in list" :key="item.title" :course="item" :style-obj="styleObj" v-on:del-event="deleteHandler"></course-item>
+        <course-item
+          v-for="item in list"
+          :key="item.title"
+          :course="item"
+          :style-obj="styleObj"
+          v-on:del-event="deleteHandler"
+        ></course-item>
       </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
